--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -157,9 +157,8 @@
 <div class="content" role="main">
  <h2>Contents</h2>
   <div class="card-container">
-    <a class="card" routerLink="step1">
-      <span>Step1</span>
-    </a>
+    <a class="card" routerLink="step1"><span>Step1</span></a>
+    <a class="card" routerLink="step2"><span>Step2</span></a>
   </div>
 </div>
 
