--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -159,6 +159,7 @@
   <div class="card-container">
     <a class="card" routerLink="step1"><span>Step1</span></a>
     <a class="card" routerLink="step2"><span>Step2</span></a>
+    <a class="card" routerLink="step3"><span>Step3</span></a>
   </div>
 </div>
 
