--- a/src/app/contents/step1/step1/step1.component.html
+++ b/src/app/contents/step1/step1/step1.component.html
@@ -1,5 +1,5 @@
 <div *ngFor="let gallery of galleries; index as i" class="container">
-  <h3 class="title">Gallery {{ i + 1 }}</h3>
+  <h3 class="title">Gallery1-{{ i + 1 }}</h3>
   <div class="gallery">
     <a
       *ngFor="let image of gallery"
