--- a/src/app/contents/step2/step2/step2.component.html
+++ b/src/app/contents/step2/step2/step2.component.html
@@ -1,3 +1,3 @@
 <div *ngFor="let gallery of galleries; index as i" class="container">
-  <app-gallery [title]="'Gallery' + (i + 1)" [images]="gallery"></app-gallery>
+  <app-gallery [title]="'Gallery2-' + (i + 1)" [images]="gallery"></app-gallery>
 </div>
