--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -160,6 +160,7 @@
     <a class="card" routerLink="step1"><span>Step1</span></a>
     <a class="card" routerLink="step2"><span>Step2</span></a>
     <a class="card" routerLink="step3"><span>Step3</span></a>
+    <a class="card" routerLink="step4"><span>Step4</span></a>
   </div>
 </div>
 
